--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "json-schema-to-jsdoc",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "JSON Schema to JSDoc generator",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
-    "example": "node example.js",
-    "postexample": "jsdoc docs.js"
+    "test": "jest",
+    "test:debug": "cross-env DEBUG=jsdoc jest"
   },
   "keywords": [
     "JSON",
@@ -18,11 +17,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "json-pointer": "^0.6.0"
+    "debug": "^4.1.0",
+    "fs-extra": "^7.0.1",
+    "json-schema-ref-parser": "^6.0.2"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "jsdoc": "^3.4.3",
-    "mocha": "^3.2.0"
+    "coveralls": "^3.0.2",
+    "cross-env": "^5.2.0",
+    "jest": "^23.6.0",
+    "jsdoc": "^3.4.3"
   }
 }
